# xbtx

./: CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  autogen.sh  background.tiff  configure.ac  libBitcoinSubsidiumconsensus.pc  libBitcoinSubsidiumconsensus.pc.in
assets/: asset_metadata_spec.md
binaries/: README.md
contrib/: BitcoinSubsidium-cli.bash-completion  BitcoinSubsidium-qt.pro  BitcoinSubsidium-tx.bash-completion  BitcoinSubsidiumd.bash-completion  gitian-build.sh  install_cli.sh  tidy_datadir.sh
depends/: funcs.mk
doc/: Doxyfile.in  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  atomicswaps.md  benchmarking.md  bips.md  build-openbsd.md  build-osx.md  build-rasberrypi.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.md  zmq.md
doc/man/: BitcoinSubsidium-cli.1  BitcoinSubsidium-qt.1  BitcoinSubsidium-tx.1  BitcoinSubsidiumd.1  Makefile.am
share/: genbuild.sh  setup.nsi.in
src/: BitcoinSubsidium-cli-res.rc  BitcoinSubsidium-cli.cpp  BitcoinSubsidium-tx-res.rc  BitcoinSubsidium-tx.cpp  BitcoinSubsidiumd-res.rc  BitcoinSubsidiumd.cpp  LibBoolEE.cpp  LibBoolEE.h  Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addressindex.h  addrman.cpp  addrman.h  amount.h  base58.cpp  (+118 more)
(+623 files in other folders)
