dist_man1_MANS=

if BUILD_BitcoinSubsidiumD
  dist_man1_MANS+=BitcoinSubsidiumd.1
endif

if ENABLE_QT
  dist_man1_MANS+=BitcoinSubsidium-qt.1
endif

if BUILD_BitcoinSubsidium_CLI
  dist_man1_MANS+=BitcoinSubsidium-cli.1
endif

if BUILD_BitcoinSubsidium_TX
  dist_man1_MANS+=BitcoinSubsidium-tx.1
endif